<resources>
    <string name="app_name">Taxinator 3000</string>
    <string name="txtTitle">Are you married?</string>
    <string name="txtSelect">Select One</string>
    <string name="txtStandardDeduct">Do you want to take the standard deduction?</string>
    <string name="txtIndividual">Individual Tax Due</string>


    <string name="txtCalculate">Calculate your taxes</string>
    <string name="edtIncome">Enter your income</string>
    <string name="edtSpouseIncome">Enter your spouse\'s income</string>

    <string name="txtTaxDue">$0.00</string>
    <string name="Submit">Submit</string>
    <string name="switchMoreIncome" translatable="false">yes</string>

    <string-array name="txtMarried">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="rdioTakeDeduction">Yes</string>
    <string name="rdioTNoDeduction">No</string>
    <string name="btnCalculate">CALCULATE TAX DUE</string>
    <string name="txtTakeDeduction">Do you want to take the standard deduction?</string>


</resources>
