<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_individual"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.helenmiller.taxcalculator.IndividualActivity"
    android:paddingLeft="0dp">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txtEnterIncome"
            android:hint="@string/edtIncome"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:textColorHint="?attr/colorControlNormal"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/txtIndividual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtindividualLabel"
            android:gravity="bottom|center_horizontal"
            android:padding="14dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp" />

        <Button
            android:text="@string/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSubmit"
            android:textSize="18sp"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal|center"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEnterIncome"
            android:layout_alignEnd="@+id/txtEnterIncome"
            android:layout_marginEnd="9dp"
            android:layout_marginTop="10dp">

                <TextView
                    android:text="@string/txtTakeDeduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtTakeDeduction"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:padding="15dp"
                    android:textSize="14sp" />

                <RadioButton
                    android:text="@string/rdioTakeDeduction"
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:layout_below="@+id/txtEnterIncome"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="15dp"
                    android:id="@+id/radioTakeDeduction"
                    android:textSize="18sp" />

                <RadioButton
                    android:text="@string/rdioTNoDeduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioTakeDeduction"
                    android:layout_alignParentStart="true"
                    android:id="@+id/radioNoDeduction"
                    android:textSize="18sp"
                    android:layout_weight="1" />

        </RadioGroup>

        <TextView
            android:text="@string/txtTaxDue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/TaxDue"
            android:textSize="46sp"
            android:typeface="sans"
            android:background="#33b733"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/background_light"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_marginTop="53dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />


</RelativeLayout>
