<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_married"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.helenmiller.taxcalculator.MarriedActivity">


    <TextView
        android:text="@string/txtTaxDue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TaxDueM"
        android:textSize="56sp"
        android:typeface="sans"
        android:background="#33b733"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/background_light"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_above="@+id/txtEnterIncomeM"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtEnterIncomeM"
        android:hint="@string/edtIncome"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/married"
        android:id="@+id/imageView7"
        android:layout_marginEnd="226dp"
        android:layout_above="@+id/TaxDueM"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubmitM"
        android:layout_marginBottom="14dp"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/txtTakeDeduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_weight="0.13"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txtEnterIncomeM"
        android:layout_alignParentEnd="true"
        android:textSize="18sp"
        android:gravity="center_horizontal" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:paddingLeft="10dp">

        <RadioButton
            android:text="@string/rdioTakeDeduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioDedcutionM"
            android:textSize="18sp"
            android:layout_marginBottom="13dp"
            android:layout_above="@+id/radioDeductNo"
            android:layout_toEndOf="@+id/radioGroup"
            android:paddingLeft="10dp" />

        <RadioButton
            android:text="@string/rdioTNoDeduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioDeductNo"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_marginBottom="27dp"
            android:layout_above="@+id/btnSubmitM"
            android:layout_alignStart="@+id/radioDedcutionM"
            android:paddingLeft="10dp" />
    </RadioGroup>

</RelativeLayout>
